# LMSstat_python

./: .gitignore  README.md  examples.ipynb  pyproject.toml  test.ipynb
lmsstat/: README.md  __init__.py
lmsstat/plot/: __init__.py  _plots.py  _utils.py
lmsstat/stat/: allstat.py  posthoc.py  preprocessing.py  tests.py
lmsstat/stats/: __init__.py  _allstat.py  _posthoc.py  _tests.py  _utils.py
