[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lmsstat"
version = "0.0.1"
authors = [{ name = "Daehwan Kim", email = "kdh5358@snu.ac.kr" }]
dynamic = ["description"]
dependencies = [
    "ipykernel",
    "jupyter",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels"
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/daehwankim12/LMSstat_python"