[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lmsstat"
version = "0.1.0.dev0"
readme = "README.md"
authors = [{ name = "Daehwan Kim", email = "kdh5358@snu.ac.kr" }]
dynamic = ["description"]
dependencies = [
    "ipykernel",
    "jupyter",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "altair",
    "vl-convert-python"
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
Source = "https://github.com/daehwankim12/LMSstat_python"